# meteo-agent

./: .env.example  .gitignore  BRANCHES.md  README.md  docker-compose.yml  pyproject.toml  setup-branches.sh
clickhouse-config/: cluster.xml
data/: build_db.py
guide/: 01-setup-and-data.md  02-tools.md  03-loop.md  04-graph.md  05-mcp.md  06-observability.md  07-evals.md
slides/: meteo-agent.md
src/meteo_agent/: __init__.py  config.py  graph.py  loop.py  mcp_agent.py  mcp_server.py  observability.py  prompt.py  tools.py
src/meteo_agent/evals/: dataset.py  run_experiment.py
starter/: .env.example  README.md  pyproject.toml
starter/data/: build_db.py
starter/src/meteo_agent/: config.py  loop.py  observability.py  tools.py
starter/src/meteo_agent/evals/: run_experiment.py
starter/tests/: test_integration.py  test_tools.py
tests/: conftest.py  test_loop_recorded.py
