[project]
name = "meteo-agent"
version = "0.1.0"
description = "A production-grade weather-data SQL agent — workshop STARTER (you implement the TODOs)."
readme = "README.md"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langfuse>=4.12.0",
    "langgraph>=1.2.6",
    "mcp[cli]>=1.28.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
meteo-loop = "meteo_agent.loop:main"
meteo-graph = "meteo_agent.graph:main"
meteo-mcp = "meteo_agent.mcp_server:main"
meteo-mcp-agent = "meteo_agent.mcp_agent:main"
meteo-trace = "meteo_agent.observability:main"
meteo-eval = "meteo_agent.evals.run_experiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests against a live ollama + langfuse stack (deselect with -m 'not integration')",
]
addopts = "-m 'not integration'"
